# realopinsight

./: .gitignore  AUTHORS  ChangeLog  DEPENDENCIES  Dockerfile  Dockerfile.builder  Makefile.am  README  README.md  authtoken.txt  config.h.in  configure.ac  container-entrypoint.sh  container-extract-dist.sh  install-manager  install-sh  install-sh.obs  install-web-sh  install.sh  makeRelease.sh  ngrt4n-web.pro  ngrt4n.pro  ngrt4n.qrc  ngrt4n_en.ts  ngrt4n_fr.qm  ngrt4n_fr.ts  ngrt4n_la.ts  ngrt4nd.pro  realopinsight.pro  realopinsight.qrc  realopinsightctld
.github/workflows/: build-image-on-pr.yml  build-image.yml  ci.yml
QsLog/: QsDebugOutput.cpp  QsLog.cpp  QsLog.pri  QsLogLevel.h  log_example.pro  main.cpp
client/src/: Auth.cpp  Auth.hpp  Chart.cpp  Chart.hpp  GraphView.cpp  GraphView.hpp  GuiDashboard.cpp  GuiDashboard.hpp  GuiDialogForms.cpp  GuiDialogForms.hpp  GuiPreferences.cpp  GuiPreferences.hpp  GuiUtils.cpp  GuiUtils.hpp  MainWindow.cpp  MainWindow.hpp  MsgConsole.cpp  MsgConsole.hpp  PieChart.cpp  PieChart.hpp  PieChartItem.cpp  PieChartItem.hpp  ServiceEditor.cpp  ServiceEditor.hpp  StatsLegend.cpp  StatsLegend.hpp  SvConfigCreator.cpp  SvConfigCreator.hpp  SvNavigatorTree.cpp  SvNavigatorTree.hpp  WebKit.cpp  WebKit.hpp  ngrt4n-editor.cpp  ngrt4n-manager.cpp  ngrt4n-oc.cpp
contribs/: README_INSTALL  README_UPDATE  apache-htaccess  apache-realopinsight-ultimate.conf  appliance-ultimate-apply-patch.sh  appliance-ultimate-install.sh  appliance-ultimate-makepatch.sh  appliance-ultimate-upgrade.sh  fastcgi.conf  index.html  install-ultimate-distrib.sh  make-ultimate-distrib.sh  realopinsight-backup  realopinsight-site  realopinsight-ultimate.conf  realopinsightctld  realopinsiht-restore.sh  ultimate-make-distrib.sh  wt_config.xml
contribs/backup/: realopinsight-backup  realopinsight-restore
doc/: Concept_Guide.tex~  convert2cms.py  doc.tex  documentation.tex  documentation.tex~
docs/: deployement-on-kubernetes.md  deployment-on-docker.md  deployment-on-kubernetes.md
examples/: customerB.zbx.ngrt4n.xml  hadoop.ms.ngrt4n.xml  nagioscon13.nag.ngrt4n.xml  opennebula.ms.ngrt4n.xml  openstack.ms.ngrt4n.xml  pandora-server.ms.ngrt4n.xml  pandora-server.pfms.ngrt4n.xml  random-view.ms.ngrt4n.xml  sap.ms.ngrt4n.xml  small_hosting_platform.ms.ngrt4n.xml  small_hosting_platform.nag.ngrt4n.xml  small_hosting_platform.xml  small_hosting_platform.zbx.ngrt4n.xml  small_hosting_platform.zns.ngrt4n.xml  small_hosting_platform2.zab.ngrt4n.xml  test.zbx.ngrt4n.xml  test.zns.ngrt4n.xml  test_calc_rules.nag.ngrt4n.xml
helm/: values.yaml
i18n/: ngrt4n_fr.qm  ngrt4n_fr.ts  realopinsight_fr.ts
include/: Auth.hpp  Base.hpp  Parser.hpp  PieChart.hpp  PieChartItem.hpp  PreferencesDialog.hpp  ServiceEditor.hpp  SvConfigCreator.hpp  SvNavigator.hpp
librealopinsight/: librealopinsight.cpp  librealopinsight.hpp  librealopinsight.pro  librealopinsight_global.h
obs/: debian.control  debian.postinst  debian.postrm  debian.rules  install-sh  ngrt4n-d4n.dsc  ngrt4n-d4n.spec  obs_to_bintray.sh  realopinsight.dsc  setup-package.sh
one/: curl-xml-rpc.sh  hosts.html  index.html  onehost.xml  sites.html  sites.xml
scripts/: ngrt4n
src/: Auth.cpp  Base.cpp  GraphView.cpp  MsgPanel.cpp  Parser.cpp  PieChart.cpp  PieChartItem.cpp  PreferencesDialog.cpp  ServiceEditor.cpp  Stats.cpp  StatsLegend.cpp  SvConfigCreator.cpp  SvNavigator.cpp  SvNavigatorTree.cpp  WebKit.cpp  ngrt4n.cpp
test/: hosting-platform.bak.xml  small_hosting_platform.xml  test.xml  test2.xml
unittests/: Makefile  moc_MkLsHelper.cpp  tst_mklshelpertest  tst_mklshelpertest.cpp  tst_mklshelpertest.moc  unittests.pro
win-setup/: Readme.txt  ngrt4n.iss
win32/: .cproject  .project  INSTALL  Makefile  Makefile.Debug  Makefile.Release  Makefile.in  ROADMAP  buildarchive.sh  config.h  config.status  configure  configure.ac  install-sh  ngrt4n-editor_resource.rc  ngrt4n-oc_resource.rc  ngrt4n.pro  ngrt4n_en.ts  ngrt4n_resource.rc  ngrt4nd  object_script.ngrt4n-editor.Release  object_script.ngrt4n-oc.Debug  object_script.ngrt4n.Release  row-manager
(+842 files in other folders)
